fix(i18n): fix translation

--- a/custom_components/poolcopilot/translation/fr.json
+++ b/custom_components/poolcopilot/translation/fr.json
@@ -8,7 +8,7 @@
         "name": "Température de l'air"
       },
       "poolcopilot_pressure": {
-        "name": "Pression du filtre"
+        "name": "Pression"
       },
       "poolcopilot_pH": {
         "name": "pH"
