--- a/custom_components/poolcopilot/translation/en.json
+++ b/custom_components/poolcopilot/translation/en.json
@@ -38,6 +38,18 @@
         "name": "PoolCop Status"
       }
     }
+  },
+  "config": {
+    "title": "PoolCopilot",
+    "step": {
+      "user": {
+        "title": "Configure PoolCopilot",
+        "description": "No options required. Click 'Submit' to continue."
+      }
+    },
+    "abort": {
+      "single_instance_allowed": "Only one instance of PoolCopilot is allowed."
+    }
   }
 }
 
