--- a/custom_components/mypoolcopilot/translations/en.json
+++ b/custom_components/mypoolcopilot/translations/en.json
@@ -1,54 +1,54 @@
 {
   "entity": {
     "sensor": {
-      "poolcopilot_temperature_water": {
+      "mypoolcopilot_temperature_water": {
         "name": "Water Temperature"
       },
-      "poolcopilot_temperature_air": {
+      "mypoolcopilot_temperature_air": {
         "name": "Air Temperature"
       },
-      "poolcopilot_pressure": {
+      "mypoolcopilot_pressure": {
         "name": "Pressure"
       },
-      "poolcopilot_pH": {
+      "mypoolcopilot_pH": {
         "name": "pH"
       },
-      "poolcopilot_orp": {
+      "mypoolcopilot_orp": {
         "name": "ORP"
       },
-      "poolcopilot_ioniser": {
+      "mypoolcopilot_ioniser": {
         "name": "Ionisor"
       },
-      "poolcopilot_voltage": {
+      "mypoolcopilot_voltage": {
         "name": "Voltage"
       },
-      "poolcopilot_waterlevel": {
+      "mypoolcopilot_waterlevel": {
         "name": "Water Level"
       },
-      "poolcopilot_status_pump": {
+      "mypoolcopilot_status_pump": {
         "name": "Pump Status"
       },
-      "poolcopilot_status_pumpspeed": {
+      "mypoolcopilot_status_pumpspeed": {
         "name": "Pumpspeed Status"
       },
-      "poolcopilot_status_valveposition": {
+      "mypoolcopilot_status_valveposition": {
         "name": "Valve Position"
       },
-      "poolcopilot_status_poolcop": {
+      "mypoolcopilot_status_poolcop": {
         "name": "PoolCop Status"
       }
     }
   },
   "config": {
-    "title": "PoolCopilot",
+    "title": "MyPoolCopilot",
     "step": {
       "user": {
-        "title": "Configure PoolCopilot",
+        "title": "Configure MyPoolCopilot",
         "description": "No options required. Click 'Submit' to continue."
       }
     },
     "abort": {
-      "single_instance_allowed": "Only one instance of PoolCopilot is allowed."
+      "single_instance_allowed": "Only one instance of MyPoolCopilot is allowed."
     }
   }
 }
