--- a/custom_components/mypoolcopilot/translations/en.json
+++ b/custom_components/mypoolcopilot/translations/en.json
@@ -17,7 +17,7 @@
         "name": "ORP"
       },
       "ioniser": {
-        "name": "Ionizer"
+        "name": "Ioniser"
       },
       "voltage": {
         "name": "System Voltage"
@@ -40,11 +40,13 @@
     }
   },
   "config": {
-    "title": "MyPoolCopilot",
     "step": {
       "user": {
         "title": "Configure MyPoolCopilot",
-        "description": "Insert your API key, then click 'Submit'."
+        "description": "Enter your PoolCopilot API Key to connect.",
+        "data": {
+          "apikey": "API Key"
+        }
       }
     },
     "abort": {
